--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "live-server --open=./SpecRunner.html --port=8081",
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"  },
+    "babel": "babel . --out-dir compiled --presets=env,react --ignore=node_modules,compiled --source-maps inline -w"},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Papatiara/movieList.git"
